--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 @font-face {
 	font-family: vcr_osd_monoregular;
-	src:url(mchangxe/VCR_OSD_MONO_1.001.ttf);
+	src:url(mchangxe.github.io/VCR_OSD_MONO_1.001.ttf);
 
 }
 
