--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color:#EBD1BD">
+<body style="background-color:"#EBD1BD"">
 
 @font-face {
 	font-family: vcr_osd_monoregular;
