--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<p style="background-color:"#EBD1BD"">
+<body bgcolor="#E6E6FA">
 
 
 <P style="font-family:'vcr_osd_monoregular'; text-align:center; font-size:70%; color:white">MICHAEL CHANG 2016</h1>
