--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-<body bgcolor="#E6E6FA">
+<body bgcolor="#EBD1BD">
 
 
-<P style="font-family:'vcr_osd_monoregular'; text-align:center; font-size:70%; color:white">MICHAEL CHANG 2016</h1>
-<p style="font-family:'vcr_osd_monoregular'; text-align:center; font-size:70%; color:white">ALL PROJECTS ON:</p>
+<P style="font-family:'vcr_osd_monoregular'; text-align:center; font-size:150%; color:white">MICHAEL CHANG 2016</h1>
+<p style="font-family:'vcr_osd_monoregular'; text-align:center; font-size:150%; color:white">ALL PROJECTS ON:</p>
 
 </body>
 </html>
