--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 <body bgcolor="#EBD1BD">
 
 
-<P style="font-family:'vcr_osd_monoregular'; text-align:center; font-size:140%; color:white">MICHAEL CHANG 2016</h1>
-<p style="font-family:'vcr_osd_monoregular'; text-align:center; font-size:140%; color:white">ALL PROJECTS ON:</p>
+<P> MICHAEL CHANG 2016</p>
+<p>ALL PROJECTS ON:</p>
+<p>http://3005mispace.tumblr.com/</p>
 
 </body>
 </html>
