--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
 </head>
 <body bgcolor="#EBD1BD">
 
-<p1>    </p1>
-<p1>    </p1>
-<p1>    </p1>
 
-<P> MICHAEL CHANG 2016</p>
+
+<P style>MICHAEL CHANG 2016</p>
 <p>ALL PROJECTS ON:</p>
 <p>http://3005mispace.tumblr.com/</p>
 
