--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
  <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
-<body bgcolor="#EBD1BD">
 
-<img src= 'https://scontent-ord1-1.xx.fbcdn.net/hphotos-xpf1/t31.0-8/11791914_10206299056013574_9153469303748839983_o.jpg'>
+<style>
+body {
+
+	background-image: url('https://scontent-ord1-1.xx.fbcdn.net/hphotos-xpf1/t31.0-8/11791914_10206299056013574_9153469303748839983_o.jpg');
+	background-repeat: no-repeat;
+	background-position: center;
+
+
+}
+
+
+</style>
+<body style="background-color:#313131">
 
 <P style>MICHAEL CHANG 2016</p>
 <p>ALL PROJECTS ON:</p>
