--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@ body {
 
 
 }
-
-
 </style>
+
+
 <body style="background-color:#313131">
 
-<P style>MICHAEL CHANG 2016</p>
+<P>MICHAEL CHANG 2016</p>
 <p>ALL PROJECTS ON:</p>
 <p>http://3005mispace.tumblr.com/</p>
 
