--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@ body {
 
 <body style="background-color:#313131">
 
-<P>MICHAEL CHANG 2016</p>
-<p>ALL PROJECTS ON:</p>
-<p>http://3005mispace.tumblr.com/</p>
+<P>MICHAEL CHANG 2016 <br>
+ALL PROJECTS ON: <br>
+http://3005mispace.tumblr.com/</p>
 
 </body>
 </html>
