--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <style>
 body {
 
-	background-image: url('https://scontent-ord1-1.xx.fbcdn.net/hphotos-xpf1/t31.0-8/11791914_10206299056013574_9153469303748839983_o.jpg');
+	background-image: url('http://i68.tinypic.com/25ew95e.jpg');
 	background-repeat: no-repeat;
 	background-position: center;
 
