--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ body {
 	background-image: url('http://i68.tinypic.com/25ew95e.jpg');
 	background-repeat: no-repeat;
 	background-position: center;
+	background-size: cover;
 
 
 }
@@ -24,6 +25,8 @@ body {
 <embed src="music/comfortable.mp3" autostart="true" loop="true"
 width="2" height="0">
 </embed>
+
+<video id="sampleMovie" src="movie/movie.mov"></video>
 
 <P>MICHAEL CHANG 2016 <br>
 ALL PROJECTS ON: <br>
