--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@ body {
 width="2" height="0">
 </embed>
 
-<video id="sampleMovie" src="movie/movie.mov"></video>
+<iframe width="420" height="315"
+src="http://tinypic.com/r/14l351u/9">
+</iframe>
 
 <P>MICHAEL CHANG 2016 <br>
 ALL PROJECTS ON: <br>
