--- a/index.html
+++ b/index.html
@@ -26,13 +26,46 @@ body {
 width="2" height="0">
 </embed>
 
-<iframe width="420" height="315"
-src="http://tinypic.com/r/14l351u/9">
-</iframe>
 
-<P>MICHAEL CHANG 2016 <br>
-ALL PROJECTS ON: <br>
-http://3005mispace.tumblr.com/</p>
+<P>Hi Melinda!<br>
+Happy Birthday!  <br>
+Congrats on being 19! Hope you had a great day today and enjoyed your birthday so far. I feel kinda sad that we couldn't celebrate your birthday the way we used to, but regardless, I hope you like the flowers and cake that I sent you. 
+<p>
+
+<p>
+The past 2 months felt so long. Personally, I have experienced and learned so much. I never thought that I would rely on a person so much that my life will take such a deep turn without her. At this point, I really dont know about how I feel. Am I still holding on because being with you is the only solution that can make me feel better right now and give me a sense of solace temporarily or is it because I genuinely think that our relationship is worth every bit of my effort and time. Everyone gets tired of doing something and not seeing results or return and I am no different. However, deep down inside, I know I still have hope for us and I want you back because I sincerely feel like you are the one for me, and I know in your heart, you feel the same way.
+<p>
+
+<p>
+Reflecting is all I have done and all I could do for the past months. I went through different stages and learned things quickly. I think its clear now, at least for myself, that I know what mistakes I have made and I have made the changes necessary to not make those same mistakes again. I have became a better man through this experience and therefore I will not change or regret anything I have done. Theres no such thing as a perfect human being, but what really defines us is how we face our mistakes and learn from them. From my experience, I know that people can change, only if they really want to. And trust me, I REALLY wanted to and therefore I have changed, not for you, not for us, but for myself. 
+<p>
+
+<p>
+With a new perspective on trust and relationship, I began to realize what really happened to us in the past months and the reason why it turned out the why it is now. At the start, when you just got to college, we didn't talk much and I became upset because you would reply my message 3,4hours after I sent them. We didn't skype alot either because you always said you were busy. I broke up with you for this reason, I thought that you probably changed your mind about our relationship. A month later, I checked your snapchat because I was afraid that you probably found a new guy or something. I let my insecurities get to me. And now we are here. 
+<p>
+
+<p>	
+The reason I am telling you this right now is because I want you to know that the situation is not not as bad as you think it is. I know what you are thinking right now, that you can't accept the fact that I couldn't trust you enough and did what I have done. But I want you to know that, from the start, WE didn't mean anything we have done and it was all because of the distance. WE BOTH MADE MISTAKES, BUT ITS NOT OUR FAULT. I thought that you started changing a lot not because you actually changed a whole lot but it was because of the distance, that I wasn't able to see you grow and change first hand. In the same way, you thought that I wasn't treating you well enough not because I wasn't but becuase theres only so many things I can do with the distance between us. No matter how hard I try, the only thing that can connect us was those emotionless words on Between. Its not that we were both terrible people for doing what we have done, but simply because the distance made us do things we would never do and have never done. Before we started college, we saw each other probably 300 days out of 365 and the majority of those 300 days, we were right by each other's sides; we can see each other, we can talk to each other but most importantly, we can FEEL each other. Our close connection established the trust and love we have for each other and having been thrown suddenly into two different environments 1500 miles away, we couldn't adjust in time. 
+<p>
+
+<p>	
+You definitely did not change much and still care so much for me and I definitely can still trust you with all of my heart. In the end, our love for each other were built stronger than everybody else's. We have something special that we can always build trust on, that is we affected the other so much and we both grew together. I was going through dion's wechat (I was bored) and I saw a picture of us the day we went to China Open together, it was September 30 of 2013. It was then that I suddenly realized that we both changed so much, but we changed and grew together, based on each other. A part of me started to feel and look like you and a part of you started to feel and look like me. Thats what we have that is special. No matter how we fought and split up, we always went back together because we literally became 1 person all together. We are a perfect fit not because we both do the same thing, think the same way but because we compliment each other. 
+<p>
+
+<p>
+Today is your birthday, I am sure you are still the same you that I fell in love so much with and I know this because I trust you, not because I checked all your social media and other things and made sure you were still the same person. I am sure you still have feelings for me because I trust you and you still have hope for us because I trust you. I know the only thing stopping us from keep going on is because of what I have done and you cannot accept that I, Michael Chang, can do such thing. But I want to tell you, that was not me, I simply did it because the distance between us magnified my fears just like how it magnified both of our mistakes that we would have no problem fixing if we were still together in Beijing. I promise you, we can still go back to the old us because the things we have done are not in our character. 
+<p>
+
+<p>	
+In around two weeks time, it will be our 2-year anniversary. After another 4 days, we will start our long distance relationship again. I think that the timing is perfect. Its like we are back at our starting point, Janurary 1st and we can have another shot at this long distance thing. I am sure for the past few months, we learned that the distance is not easy, but having tried it and failed, I think we both know how to get through it together. And this time, I am not asking you to wait for me for another 3 years of long distance. All I ask is 1 more year. And I will go find you at UCSD. No one deserves a long distance relationship. Its a suffering and its not what a relationship should feel like. 
+<p>
+
+<p>
+I. love. you. and I have never meant these 3 words as much as I mean right now.<br> We can do this if you just believe and trust in us. I'd do anything for us and all I ask right now is another chance, for us. 
+<p>
+
+
+ </p>
 
 
 
