--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@ body {
 
 
 
-<embed src="music/comfortable.mp3" autostart="true" loop="true"
-width="2" height="0">
-</embed>
-
+<audio autoplay="autoplay" controls="controls">  
+   <source src="music/comfortable.mp3" />   
+</audio> 
 
 <P>Hi Melinda!<br>
 Happy Birthday!  <br>
