--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <style>
 body {
 
-	background-image: url('http://i68.tinypic.com/25ew95e.jpg');
+	background-image: url('http://i65.tinypic.com/j767u8.jpg');
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
@@ -22,9 +22,10 @@ body {
 
 
 
-<audio autoplay="autoplay" controls="controls">  
+<audio autoplay="autoplay" controls="controls" loop>  
    <source src="music/comfortable.mp3" />   
 </audio> 
+
 
 <P>Hi Melinda!<br>
 Happy Birthday!  <br>
@@ -60,9 +61,12 @@ In around two weeks time, it will be our 2-year anniversary. After another 4 day
 <p>
 
 <p>
-I. love. you. and I have never meant these 3 words as much as I mean right now.<br> We can do this if you just believe and trust in us. I'd do anything for us and all I ask right now is another chance, for us. 
+I. love. you. and I have never meant these 3 words as much as I mean right now.<br> We can do this if you just believe and trust in us. I'd do anything for us and all I ask right now is another chance, for us. If you decide to give it another shot, I will see you in a few days. 
 <p>
 
+<p>
+	Michael 
+	<p>
 
  </p>
 
