--- a/index.html
+++ b/index.html
@@ -60,8 +60,15 @@ Today is your birthday, I am sure you are still the same you that I fell in love
 In around two weeks time, it will be our 2-year anniversary. After another 4 days, we will start our long distance relationship again. I think that the timing is perfect. Its like we are back at our starting point, Janurary 1st and we can have another shot at this long distance thing. I am sure for the past few months, we learned that the distance is not easy, but having tried it and failed, I think we both know how to get through it together. And this time, I am not asking you to wait for me for another 3 years of long distance. All I ask is 1 more year. And I will go find you at UCSD. No one deserves a long distance relationship. Its a suffering and its not what a relationship should feel like. 
 <p>
 
+
+
 <p>
 I. love. you. and I have never meant these 3 words as much as I mean right now.<br> We can do this if you just believe and trust in us. I'd do anything for us and all I ask right now is another chance, for us. If you decide to give it another shot, I will see you in a few days. 
+<p>
+
+
+<p> 
+	Lastly I want you to know that, together, we can overcome anything that we face, no matter if its your mom or the distance, since we have already came this far. :) 
 <p>
 
 <p>
